Add varargs for find method